fixed spacing

--- a/resume.css
+++ b/resume.css
@@ -77,6 +77,10 @@ h3 {
     padding-bottom: 15px;
 }
 
+.skills-wrap {
+  margin-bottom: 50px;
+}
+
 .skills {
   border-top: 2px solid #00b9da;
   line-height: 1.8; 
@@ -90,6 +94,7 @@ h3 {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: -15px;
 }
 
 .skill-col {
